[gd_scene format=3 uid="uid://c2ak87o5c12ym"]

[ext_resource type="Script" uid="uid://bnwpysmdnjtis" path="res://scripts/core/main.gd" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://c4dfx7vyx64je" path="res://scripts/core/TimerController.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://d01jwr4g2s6vx" path="res://scenes/ui/SetupScreen.tscn" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://dohslqwjte4f" path="res://scripts/ui/SetupScreen.gd" id="3_sugp2"]

[node name="Main" type="Node" unique_id=1691925178]
script = ExtResource("1_jyhfs")

[node name="TimerController" type="Node" parent="." unique_id=1717870548]
script = ExtResource("1_o5qli")

[node name="ThemeController" type="Node" parent="." unique_id=459119740]

[node name="AudioController" type="Node" parent="." unique_id=1536974650]

[node name="UI" type="CanvasLayer" parent="." unique_id=1223684271]

[node name="SetupScreen" parent="UI" unique_id=1127414695 instance=ExtResource("2_0wfyh")]
script = ExtResource("3_sugp2")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SetupScreen" unique_id=1149377807]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="UI/SetupScreen/VBoxContainer" unique_id=1352503530]
layout_mode = 2
text = "Set Timer"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/SetupScreen/VBoxContainer" unique_id=1924276166]
layout_mode = 2

[node name="MinutesLabel" type="Label" parent="UI/SetupScreen/VBoxContainer/HBoxContainer" unique_id=1045114759]
layout_mode = 2
text = "Minutes:"

[node name="MinutesSpinBox" type="SpinBox" parent="UI/SetupScreen/VBoxContainer/HBoxContainer" unique_id=2009577000]
layout_mode = 2
min_value = 1.0
max_value = 60.0
value = 5.0

[node name="StartButton" type="Button" parent="UI/SetupScreen/VBoxContainer" unique_id=552930494]
layout_mode = 2
text = "Start"

[node name="RunScreen" type="Control" parent="UI" unique_id=1027753969]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationRoot" type="Node2D" parent="." unique_id=1294286516]
